# libref

./: .gitignore  README.md
examples/: main.cpp
libref/: CMakeLists.txt
libref/include/: LibRef.h  Reference.h
libref/include/Graph/: Edge.h  Graph.h  Vertex.h
libref/include/LibRef/: Object.h  Reference.h
libref/include/Table/: Column.h  Query.h  Result.h  Row.h  Table.h
libref/include/Table/Queries/: DeleteQuery.h  InsertQuery.h  SelectQuery.h  UpdateQuery.h
libref/src/: LibRef.cpp  main.cpp
libref/src/Graph/: Edge.cpp  Vertex.cpp
libref/src/LibRef/: Object.cpp  Reference.cpp
libref/src/Table/: Row.cpp  Table.cpp
